(library
  (name Tests)
  ; IMPORTANT: -linkall flag is required to include all tests.
  (ocamlopt_flags -linkall -g)
  (flags (:standard -warn-error -a-27-33))
  (libraries
    rely.lib
    pastel.lib
    console.lib
    pastel-console.lib
  )
)
(include_subdirs unqualified)
(dirs :standard __tests__)
